--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Doublefree</title>
 </head>
 <body>
-    <h1>Doublefree</h1>h1>
+    <h1>Doublefree</h1>
     <h2>Ethical, Secure, Open-Source, Copyleft, Privacy-Focused, and Scalable Solutions</h2>
     <p>Follow us on Twitter: <a href="https://twitter.com/doublefreein" target="_blank">@doublefreein</a></p>
 </body>
