--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title>Doublefree</title>
 </head>
 <body>
     <h1>Doublefree</h1>
-    <h2>Ethical, Secure, Open-Source, Copyleft, Privacy-Focused, and Scalable Solutions</h2>
+    <h3>Ethical, Secure, Open-Source, Copyleft, Privacy-Focused, and Scalable Solutions</h2>
     <p>Follow us on Twitter: <a href="https://twitter.com/doublefreein" target="_blank">@doublefreein</a></p>
+    <hr>
+     <footer>
+         To read about how this site is created click <a href="https://github.com/doublefreein/doublefreein.github.io#readme">here</a>
+         <p>Except where otherwise noted, contents are licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International license</a></p>
+     </footer> 
 </body>
 </html>
