Adding ethical tech page
Signed-off-by: DoubleFree <doublefreein@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ feature_row:
     alt: "Ethical"
     title: "Ethical and Copyleft"
     excerpt: "Our solutions are ethical and copyleft by nature"
-    url: "/"
+    url: "/ethical-technology"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: 
