feat: added secure, free
Signed-off-by: DoubleFree <doublefreein@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ feature_row:
     alt: "Secure and Scalable"
     title: "Secure and Scalable"
     excerpt: "Our solutions are scalable, secure and user's privacy focused"
-    url: "/"
+    url: "/secure"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path:
     alt: "Open Source"
     title: "Open Source"
     excerpt: "Our solutions are Open source and we support Free Software"
-    url: "/"
+    url: "/floss"
     btn_class: "btn--primary"
     btn_label: "Learn more"      
 ---
