--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: splash
 permalink: /
 hidden: true
+read_time: false
 header:
   overlay_color: "#5e616c"
   overlay_image1: /assets/images/markus-spiske-FXFz-sW0uwo-unsplash.jpg
