adding bg image
Signed-off-by: DoubleFree <doublefreein@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ hidden: true
 read_time: false
 header:
   overlay_color: "#5e616c"
-  overlay_image1: /assets/images/markus-spiske-FXFz-sW0uwo-unsplash.jpg
-  overlay_image:
+  overlay_image: /assets/images/index.jpeg
 excerpt: >
   Ethical, Secure, Open-Source, Copyleft, Privacy-Focused, and Scalable Solutions. <br />
 feature_row:
