feat: updating post llp
Signed-off-by: Doublefree <doublefreein@x.com>

--- a/index.html
+++ b/index.html
@@ -7,27 +7,36 @@ header:
   overlay_color: "#5e616c"
   overlay_image: /assets/images/index.jpeg
 excerpt: >
-  Ethical, Secure, Open-Source, Copyleft, Privacy-Focused, and Scalable Solutions. <br />
+  Freedom isn’t a privilege, but a foundation <br />
 feature_row:
   - image_path: 
-    alt: "Ethical"
-    title: "Ethical and Copyleft"
-    excerpt: "Our solutions are ethical and copyleft by nature"
-    url: "/ethical-technology"
+    alt: "Ethical Software"
+    title: "Ethical Software Solutions"
+    excerpt: "We develop and deploy software stacks built on Linux and
+    open-source ecosystems. Free to use, free to fork, and maintained
+    collaboratively. Our goal: digital sovereignty for all - from rural
+    co-ops to urban startups."
+    url: "/software"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: 
-    alt: "Secure and Scalable"
-    title: "Secure and Scalable"
-    excerpt: "Our solutions are scalable, secure and user's privacy focused"
-    url: "/secure"
+    alt: "Eco-Conscious Architecture"
+    title: "Eco-Conscious Architecture"
+    excerpt: "We support and invest in buildings that use local materials like
+    lime, mud, and stone. This isn’t nostalgia - it’s climate-resilient,
+    cost-effective, and community-sourced. It decentralizes dependence on
+    industrial materials and empowers vernacular wisdom."
+    url: "/about-us"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path:
-    alt: "Open Source"
-    title: "Open Source"
-    excerpt: "Our solutions are Open source and we support Free Software"
-    url: "/floss"
+    alt: "Transparent Supply Chains"
+    title: "Transparent Supply Chains"
+    excerpt: "We work with textile artisans and merchants to build distributed
+    ledger-based systems that track the journey of every product - ensuring
+    fair profit sharing from the loom to the showroom. Everyone sees, everyone
+    gains."
+    url: "/about-us"
     btn_class: "btn--primary"
     btn_label: "Learn more"      
 ---
