fix: Adding images
Signed-off-by: Doublefree <doublefreein@x.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ header:
 excerpt: >
   Freedom isn’t a privilege, but a foundation <br />
 feature_row:
-  - image_path: 
+  - image_path: /assets/images/dfGnuLinux.png
     alt: "Ethical Software"
     title: "Ethical Software Solutions"
     excerpt: "We develop and deploy software stacks built on Linux and
@@ -19,7 +19,7 @@ feature_row:
     url: "/software"
     btn_class: "btn--primary"
     btn_label: "Learn more"
-  - image_path: 
+  - image_path: /assets/images/dfArch.png
     alt: "Eco-Conscious Architecture"
     title: "Eco-Conscious Architecture"
     excerpt: "We support and invest in buildings that use local materials like
@@ -29,7 +29,7 @@ feature_row:
     url: "/about-us"
     btn_class: "btn--primary"
     btn_label: "Learn more"
-  - image_path:
+  - image_path: /assets/images/dfBc.png
     alt: "Transparent Supply Chains"
     title: "Transparent Supply Chains"
     excerpt: "We work with textile artisans and merchants to build distributed
